[tool.poetry]
name = "ZetsuBou"
version = "0.0.1"
description = "ZetsuBou is a web-based app to serve your own image galleries and make annotation on your collections."
authors = ["ZetsuBouKyo <116266262+ZetsuBouKyo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiobotocore = ">=2.5.0"
aiofiles = ">=0.7.0"
aiosqlite = ">=0.17.0"
asyncpg = ">=0.25.0"
bcrypt = ">=3.2.0"
celery = ">=5.1.2"
click = ">=8.0.4"
cryptography = "==35.0.0"
elasticsearch = ">=7.0.0,<8.0.0"
email-validator = ">=2.0.0"
fastapi = ">=0.103.0"
gallery-dl = ">=1.20.5"
gunicorn = ">=20.1.0"
httpx = ">=0.21.1"
Jinja2 = ">=3.0.2"
minio = ">=7.1.1"
mkdocs-git-revision-date-localized-plugin = ">=1.2.0"
mkdocs-material = ">=9.1.21"
mwparserfromhell = ">=0.6.3"
opencv-python = ">=4.5.3"
passlib = ">=1.7.2"
pdf2image = ">=1.16.0"
Pillow = ">=8.3.2"
pydantic = ">=2.3.0"
pydantic-settings = ">=2.0.3"
pytest = ">=6.2.5"
pytest-asyncio = ">=0.19.0"
python-dotenv = ">=0.19.1"
python-jose = ">=3.1.0"
python-multipart = ">=0.0.5"
pytz = ">=2023.3"
PyYAML = ">=5.4.1"
redis = ">=4.5.5"
requests = ">=2.26.0"
rich = ">=13.4.1"
Scrapy = "==2.5.1"
SQLAlchemy = ">=2.0.15"
tqdm = ">=4.62.3"
twisted = "==22.10.0"
typer = ">=0.9.0"
uvicorn = ">=0.15.0"
watchfiles = ">=0.19.0"
youtube_dl = ">=2021.12.17"

[tool.poetry.dev-dependencies]
black = ">=23.3.0"
flake8 = ">=4.0.1"
isort = ">=5.12.0"
maturin = ">=1.1.0"
pre-commit = ">=2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'dist',
    'node_modules',
    'venv',
]
